jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jenkins
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 1000 
        runAsUser: 0
      containers:
      - image: jenkins/jenkins:lts-jdk11
        imagePullPolicy: IfNotPresent
        name: jenkins
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 50000
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /login
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 2
          timeoutSeconds: 5
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run
          name: docker-sock
        - name: data-disk
          mountPath: /var/jenkins_home
        - name: docker
          subPath: "docker"
          mountPath: "/usr/local/bin/docker"
        - name: kubectl
          subPath: "kubectl"
          mountPath: "/usr/local/bin/kubectl"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /var/run
          type: ""
        name: docker-sock
      - name: data-disk
        persistentVolumeClaim:
          claimName: claim-jenkins
      - name: docker
        emptyDir: {}
      - name: kubectl
        emptyDir: {}
